Node group input sockets not drawing in sidebar #57090

Closed
opened 2018-10-07 02:17:11 +02:00 by ziv · 14 comments

System Information
windows 8.1
GeForce GTX 1070

Blender Version
Broken: 2.8 alpha 2 c419cb7305

Short description of error
when I create a new node group with ctrl+g the values are invisible on the N panel(the one on the right) but you can still click on them and rename them but they don't show up but the outputs do show up

*tested it and new nodes you plug in into input also don't appear under the input section the values are invisible but it still works as buttons

Exact steps for others to reproduce the error
Open up the Shader Editor
take a random node that has an output and plug that into a random node that has an input
select the node with the input and press ctrl+g
check the panel on the right
something similar to this should have happened why is this happening.PNG

**System Information** windows 8.1 GeForce GTX 1070 **Blender Version** Broken: 2.8 alpha 2 c419cb7305f **Short description of error** when I create a new node group with ctrl+g the values are invisible on the N panel(the one on the right) but you can still click on them and rename them but they don't show up but the outputs do show up *tested it and new nodes you plug in into input also don't appear under the input section the values are invisible but it still works as buttons **Exact steps for others to reproduce the error** Open up the Shader Editor take a random node that has an output and plug that into a random node that has an input select the node with the input and press ctrl+g check the panel on the right something similar to this should have happened ![why is this happening.PNG](https://archive.blender.org/developer/F4968449/why_is_this_happening.PNG)
Author

Added subscriber: @ZivShalit

Added subscriber: @ZivShalit
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-10-07 11:56:14 +02:00
Member

D3776 fixes part of the problem [some remain -- see comments in that Differential]

[D3776](https://archive.blender.org/developer/D3776) fixes part of the problem [some remain -- see comments in that Differential]
Member

Added subscribers: @fclem, @mont29

Added subscribers: @fclem, @mont29
Member

Just an update on this:

Inputs and Outputs now show again (after 7d38654ecd)

But following issue remains:
For Inputs the node sockets draw incorrectly [for the very first in the list as well as for the currently selected Input].
For the currently selected they are actually drawn, but are overdrawn by the "row highlighting" (can check this by increasing their radius in code)
If I change the python NODE_UL_interface_sockets.draw_item code to first draw the prop and then the template_node_socket it also draws correctly (thats why Outputs work fine)

So there doesnt seem to be a problem in uiTemplateNodeSocket nor ui_draw_but_NODESOCKET [checked code as good as I could and everything seems fine there].

Instead I suspect (shot in the dark for now) either something going wrong with uiTemplateList and how uiLayoutOverlap is drawn in 2.8 or maybe something how the drawcalls get batched in 2.8?
Will continue investigating [unless @fclem or @mont29 have an idea right away?]

Just an update on this: Inputs and Outputs now show again (after 7d38654ecd) But following issue remains: For Inputs the node sockets draw incorrectly [for the very first in the list as well as for the currently **selected** Input]. For the currently selected they are actually drawn, but are overdrawn by the "row highlighting" (can check this by increasing their radius in code) If I change the python `NODE_UL_interface_sockets.draw_item` code to **first** draw the `prop` and then the `template_node_socket` it also draws correctly (thats why Outputs work fine) So there doesnt seem to be a problem in `uiTemplateNodeSocket` nor `ui_draw_but_NODESOCKET` [checked code as good as I could and everything seems fine there]. Instead I suspect (shot in the dark for now) either something going wrong with `uiTemplateList` and how `uiLayoutOverlap` is drawn in 2.8 or maybe something how the drawcalls get batched in 2.8? Will continue investigating [unless @fclem or @mont29 have an idea right away?]

Text is batched in order to reduce drawcalls count. You might have to flush the text draw cache in order to draw things in a specific order. See usage of BLF_batch_draw_flush().

I didn't look too much into this issue so it might be a shot in the dark too.

EDIT: Nevermind, it's not about text isn't it? It's too late I should sleep haha.

Text is batched in order to reduce drawcalls count. You might have to flush the text draw cache in order to draw things in a specific order. See usage of BLF_batch_draw_flush(). I didn't look too much into this issue so it might be a shot in the dark too. EDIT: Nevermind, it's not about text isn't it? It's too late I should sleep haha.
Brecht Van Lommel changed title from node group input names not showing to Node group input sockets not drawing in sidebar 2019-03-19 11:00:50 +01:00
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Marco closed this issue 2019-05-14 12:21:53 +02:00
Member

It is working in 2.8 build of 2019-05-13

It is working in 2.8 build of 2019-05-13
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

In #57090#544313, @lichtwerk wrote:
Inputs and Outputs now show again (after 7d38654ecd)

But following issue remains:
For Inputs the node sockets draw incorrectly [for the very first in the list as well as for the currently selected Input].
For the currently selected they are actually drawn, but are overdrawn by the "row highlighting" (can check this by increasing their radius in code)
If I change the python NODE_UL_interface_sockets.draw_item code to first draw the prop and then the template_node_socket it also draws correctly (thats why Outputs work fine)

There is still the issue of dots/sockets drawn incorrectly, this isnt solved...

> In #57090#544313, @lichtwerk wrote: > Inputs and Outputs now show again (after 7d38654ecd) > > But following issue remains: > For Inputs the node sockets draw incorrectly [for the very first in the list as well as for the currently **selected** Input]. > For the currently selected they are actually drawn, but are overdrawn by the "row highlighting" (can check this by increasing their radius in code) > If I change the python `NODE_UL_interface_sockets.draw_item` code to **first** draw the `prop` and then the `template_node_socket` it also draws correctly (thats why Outputs work fine) There is still the issue of dots/sockets drawn incorrectly, this isnt solved...

This issue was referenced by b2b1aa2f8e

This issue was referenced by b2b1aa2f8ead62cb376342b11348fe8495ae736d
Member

OK, had a look at this again, and it turns out drawing actually works correctly when UI_widgetbase_draw_cache is disabled.
[to check this, just comment out UI_widgetbase_draw_cache_begin and UI_widgetbase_draw_cache_end in UI_block_draw]

To properly have the drawing code of ui_draw_but_NODESOCKET in the draw cache, it needs to be a widget as well, I guess.
(Otherwise it will still draw via ui_draw_but in UI_block_draw, but drawn over by the cached widgets immediately after)
(Only other possibility would be to flush the widget draw cache just for drawing this socket -- sounds like a bad choice to me...)

In D4963, I have "widgified" the drawing code of ui_draw_but_NODESOCKET.

OK, had a look at this again, and it turns out drawing actually works correctly when `UI_widgetbase_draw_cache` is disabled. [to check this, just comment out `UI_widgetbase_draw_cache_begin` and `UI_widgetbase_draw_cache_end` in `UI_block_draw`] To properly have the drawing code of `ui_draw_but_NODESOCKET` in the draw cache, it needs to be a widget as well, I guess. (Otherwise it will still draw via `ui_draw_but` in `UI_block_draw`, but drawn over by the cached widgets immediately after) (Only other possibility would be to flush the widget draw cache just for drawing this socket -- sounds like a bad choice to me...) In [D4963](https://archive.blender.org/developer/D4963), I have "widgified" the drawing code of `ui_draw_but_NODESOCKET`.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57090
No description provided.